Readme and Bugfix

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -3,7 +3,7 @@
       "brackets": [["[", "]"], ["(", ")"]],
       "autoClosingPairs": [
         { "open": "[", "close": "]", "notIn": ["string", "comment"]  },
-        { "open": "{", "close": "}", "notIn": ["string", "comment"]  },
+        { "open": "{", "close": "}", "notIn": ["string"]  },
         { "open": "\"", "close": "\"", "notIn": ["comment"] },
         { "open": "(", "close": ")" , "notIn": ["comment"] }
       ],
