--- a/.git-ftp-ignore
+++ b/.git-ftp-ignore
@@ -9,7 +9,7 @@
 #zzViRu_Tropicana/*
 
 **/temp/*
-
+**/other/*
 
 #----------------------------------------------------------------------------------------------------------------------
 #Git-FTP-Settings --> https://github.com/git-ftp/git-ftp/blob/master/man/git-ftp.1.md
