--- a/.git-ftp-ignore
+++ b/.git-ftp-ignore
@@ -8,8 +8,8 @@
 #Projektspezifische 
 #zzViRu_Tropicana/*
 
-**/temp/*
-**/other/*
+temp/*
+
 
 #----------------------------------------------------------------------------------------------------------------------
 #Git-FTP-Settings --> https://github.com/git-ftp/git-ftp/blob/master/man/git-ftp.1.md
