--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,16 +3,35 @@
 // Hover to view descriptions of existing attributes.
 // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 {
-	"version": "0.2.0",
+	"version": "0.3.0",
     "configurations": [
         {
-            "name": "Extension",
+            "name": "Intouch-Formatter (c)vitalyruhl",
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": [
-                "--extensionDevelopmentPath=${workspaceFolder}"
-            ]
+            "args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
+            "stopOnEntry": false,
+            "sourceMaps": true,
+            "outDir": "${workspaceRoot}/out/src",
+            "outFiles": [
+				"${workspaceFolder}/out/**/*.js"
+			],
+            "preLaunchTask": "npm: watch"
+        },
+        {
+            "name": "Launch Tests",
+            "type": "extensionHost",
+            "request": "launch",
+            "runtimeExecutable": "${execPath}",
+            "args": ["--extensionDevelopmentPath=${workspaceRoot}", "--extensionTestsPath=${workspaceRoot}/out/test" ],
+            "stopOnEntry": false,
+            "sourceMaps": true,
+            "outDir": "${workspaceRoot}/out/test",
+            "outFiles": [
+				"${workspaceFolder}/out/**/*.js"
+			],
+            "preLaunchTask": "npm: watch"
         }
     ]
 } 
