some changes for apply all changes and clear nestings ready

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
 				},
 				"VBI.formatter.RemoveEmptyLines": {
 					"type": "boolean",
-					"default": false,
+					"default": true,
 					"description": "Delete empty lines."
 				},
 
