--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Intouch-Language syntax highlighting, formatter and code snippets for VSCode",
 	"version": "0.3.0",
 	"icon": "images/logo.png",
-	"publisher": "VSCEViRu",
+	"publisher": "Vitaly-ruhl",
 	"engines": {
 		"vscode": "^1.6.0"
 	},
