--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "intouch-language",
 	"displayName": "Intouch-Language and Formatter for VSCode. (c)2021 vitalyruhl",
 	"description": "Intouch-Language syntax highlighting, formatter and code snippets for VSCode",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"icon": "images/logo.png",
 	"publisher": "Vitaly-ruhl",
 	"engines": {
@@ -97,21 +97,15 @@
 					"default": true,
 					"description": "Delete empty lines."
 				},
-
 				"VBI.formatter.EmptyLinesAlsoInComment": {
 					"type": "boolean",
 					"default": false,
 					"description": "Delete empty lines in commen also."
 				},
-				"VBI.formatter.KeywordUppercaseAlsoInComment": {
+				"VBI.formatter.FormatAlsoInComment": {
 					"type": "boolean",
 					"default": false,
-					"description": "Allow uppercase Keywords in comments."
-				},
-				"VBI.formatter.AllowInlineIFClause": {
-					"type": "boolean",
-					"default": true,
-					"description": "Allow Inline IF-ENDIF - Clause."
+					"description": "Format also in comments to."
 				}
 			}
 		}
@@ -121,7 +115,10 @@
 		"postinstall": "node ./node_modules/vscode/bin/install && tsc",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"test": "npm run compile && node ./node_modules/vscode/bin/test",
+		"publish-patch": "vsce package && vsce publish patch",
+		"publish-minor": "vsce package && vsce publish minor",
+		"publish-major": "vsce package && vsce publish major"
 	},
 	"capabilities": {
 		"virtualWorkspaces": true,
