--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
 		"test": "npm run compile && node ./node_modules/vscode/bin/test",
 		"publish-patch": "vsce package && vsce publish patch",
 		"publish-minor": "vsce package && vsce publish minor",
-		"publish-major": "vsce package && vsce publish major"
+		"publish-major": "vsce package && vsce publish major",
+		"publish": "vsce package && vsce publish"
 	},
 	"capabilities": {
 		"virtualWorkspaces": true,
