--- a/language-configuration.json
+++ b/language-configuration.json
@@ -2,10 +2,10 @@
    
       "brackets": [["[", "]"], ["(", ")"]],
       "autoClosingPairs": [
-        { "open": "[", "close": "]", "notIn": ["string", "comment"]  },
-        { "open": "{", "close": "}", "notIn": ["string"]  },
-        { "open": "\"", "close": "\"", "notIn": ["comment"] },
-        { "open": "(", "close": ")" , "notIn": ["comment"] }
+        { "open": "[", "close": "]"},
+        { "open": "{", "close": "}" },
+        { "open": "\"", "close": "\""},
+        { "open": "(", "close": ")" }
       ],
       "autoCloseBefore": ";\n\t",
       "surroundingPairs": [
@@ -13,11 +13,21 @@
         ["[", "]"],
         ["(", ")"],
         ["'", "'"],
-        ["\"", "\""],
-        ["`", "`"]
+        ["\"", "\""]
       ],
       "comments": {
         "lineComment": "",
         "blockComment": ["{", "}"]
+        },
+        "folding": {
+          "markers": {
+            "start": "^{#?region\\b",
+            "end": "^{#?endregion\\b"
+          }
+        },
+        "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)",
+        "indentationRules": {
+          "increaseIndentPattern": "^((?!.*?\\/\\*).*\\*\/)?\\s*[\\}\\]].*$",
+          "decreaseIndentPattern": "^((?!\\/\\/).)*(\\{[^}\"'`]*|\\([^)\"'`]*|\\[[^\\]\"'`]*)$"
         }
 }
