#13 - fix issue, add region future

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -21,8 +21,8 @@
         },
         "folding": {
           "markers": {
-            "start": "^{#?region\\b",
-            "end": "^{#?endregion\\b"
+            "start": "^{region\\b",
+            "end": "^{endregion\\b"
           }
         },
         "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)",
