--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ temp
 node_modules
 .vscode-test
 .vscodeignore
-
+coverage
 
 #INFO:
 #https://labs.consol.de/development/git/2017/02/22/gitignore.html
