--- a/package.json
+++ b/package.json
@@ -140,6 +140,8 @@
 		"vscode:prepublish": "rm -rf ./out; npm run compile",
 		"postinstall": "tsc -p ./",
 		"compile": "tsc -p ./",
+		"test": "tsc -p ./ && jest",
+		"test:ci": "tsc -p ./ && jest --coverage=true",
 		"watch": "tsc -watch -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
 		"publish-patch": "vsce package && vsce publish patch",
@@ -155,15 +157,18 @@
 		}
 	},
 	"devDependencies": {
+		"@types/node": "^17.0.10",
 		"@types/vscode": "^1.63.1",
-		"typescript": "^4.5.5",
 		"eslint": "^8.7.0",
-		"@types/node": "^17.0.10"
+		"jest": "^27.5.1",
+		"typescript": "^4.5.5"
 	},
 	"__metadata": {
 		"id": "834eb420-2978-4100-b7de-2430fc88e429",
 		"publisherDisplayName": "Vitaly Ruhl",
 		"publisherId": "448eaf8e-6bd4-4b72-b6cd-9af578a789d2"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"@vscode/test-electron": "^2.1.2"
+	}
 }
