--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
 		"vscode:prepublish": "rm -rf ./out; npm run compile",
 		"postinstall": "tsc -p ./",
 		"compile": "tsc -p ./",
-		"test": "tsc -p ./ && jest",
+		"test": "tsc -p ./ && jest --coverage=true",
 		"test:ci": "tsc -p ./ && jest --coverage=true",
 		"watch": "tsc -watch -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
@@ -157,10 +157,15 @@
 		}
 	},
 	"devDependencies": {
+		"@types/glob": "^7.2.0",
+		"@types/jest": "^27.4.0",
 		"@types/node": "^17.0.10",
 		"@types/vscode": "^1.63.1",
+		"@vscode/test-electron": "^2.1.2",
 		"eslint": "^8.7.0",
 		"jest": "^27.5.1",
+		"jest-junit": "^13.0.0",
+		"ts-jest": "^27.1.3",
 		"typescript": "^4.5.5"
 	},
 	"__metadata": {
@@ -168,7 +173,5 @@
 		"publisherDisplayName": "Vitaly Ruhl",
 		"publisherId": "448eaf8e-6bd4-4b72-b6cd-9af578a789d2"
 	},
-	"dependencies": {
-		"@vscode/test-electron": "^2.1.2"
-	}
+	"dependencies": {}
 }
