--- a/package.json
+++ b/package.json
@@ -137,17 +137,20 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "rm -rf ./out; npm run compile",
-		"postinstall": "tsc -p ./",
+		"vscode:prepublish": "npm run compile",
+		"postinstall": "npm run compile",
 		"compile": "tsc -p ./",
-		"test": "tsc -p ./ && jest --coverage=true",
-		"test:ci": "tsc -p ./ && jest --coverage=true",
+		"test": "npm run clear:out && npm run compile && node ./out/test/runTest.js",
+		"test:ci": "npm run test",
 		"watch": "tsc -watch -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
-		"publish-patch": "vsce package && vsce publish patch",
-		"publish-minor": "vsce package && vsce publish minor",
-		"publish-major": "vsce package && vsce publish major",
-		"publish": "vsce package && vsce publish"
+		"publish-patch": "npm run compile && vsce package && vsce publish patch",
+		"publish-minor": "npm run compile && vsce package && vsce publish minor",
+		"publish-major": "npm run compile && vsce package && vsce publish major",
+		"publish": "npm run compile && vsce package && vsce publish",
+		"refresh": "rm ./out -rf && rm ./package-lock.json -f && rm ./node_modules -rf && npm i && npm run compile",
+		"clear:all": "rm ./out -rf && rm ./package-lock.json -f && rm ./node_modules -rf",
+		"clear:out": "rm ./out -rf"
 	},
 	"capabilities": {
 		"virtualWorkspaces": true,
@@ -158,14 +161,16 @@
 	},
 	"devDependencies": {
 		"@types/glob": "^7.2.0",
-		"@types/jest": "^27.4.0",
+		"@types/mocha": "^9.1.0",
 		"@types/node": "^17.0.10",
-		"@types/vscode": "^1.63.1",
+		"@types/vscode": "^1.64.0",
+		"@typescript-eslint/eslint-plugin": "^5.12.1",
+		"@typescript-eslint/parser": "^5.12.1",
 		"@vscode/test-electron": "^2.1.2",
 		"eslint": "^8.7.0",
-		"jest": "^27.5.1",
-		"jest-junit": "^13.0.0",
-		"ts-jest": "^27.1.3",
+		"glob": "^7.2.0",
+		"mocha": "^9.2.1",
+		"source-map-support": "^0.5.21",
 		"typescript": "^4.5.5"
 	},
 	"__metadata": {
