--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,18 +1,13 @@
 
 name: Unit-Testing
-
 on:
   push:
     branches:[bugfixing,future*]
   pull_request:
     branches:[master]
-
-    
+  
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
@@ -20,16 +15,16 @@ jobs:
     runs-on: ${{ matrix.os }} 
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i
-
-      - name: compile and run Test
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm run test:ci
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm i
+    - run: xvfb-run -a npm test:ci
+      if: runner.os == 'Linux'
+    - run: npm test:ci
+      if: runner.os != 'Linux'
+   
