--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -2,7 +2,7 @@
 name: Unit-Testing
 on:
   push:
-    branches:[bugfixing,future*]
+    branches:[bugfixing,master]
   pull_request:
     branches:[master]
   
