--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm i
-    - run: xvfb-run -a npm test:ci
+    - run: xvfb-run -a npm test
       if: runner.os == 'Linux'
     - run: npm test:ci
       if: runner.os != 'Linux'
