--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -20,10 +20,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     - run: npm i
     - run: xvfb-run -a npm test
       if: runner.os == 'Linux'
-    - run: npm test:ci
+    - run: npm test
       if: runner.os != 'Linux'
    
