--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"icon": "images/logo.png",
 	"publisher": "Vitaly-ruhl",
 	"engines": {
-		"vscode": "^1.63.1"
+		"vscode": "^1.73.1"
 	},
 	"repository": {
 		"type": "git",
@@ -187,9 +187,9 @@
 		"mocha": "^10.1.0",
 		"source-map-support": "^0.5.21",
 		"typescript": "^4.9.3",
-		"@primer/primitives": "^2.0.1",
 		"color": "^4.2.3",
-		"nodemon": "^2.0.20"
+		"nodemon": "^2.0.20",
+		"@primer/primitives": "^2.0.1"
 	},
 	"__metadata": {
 		"id": "834eb420-2978-4100-b7de-2430fc88e429",
