--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "intouch-language",
-	"displayName": "Intouch-Language and Formatter for VSCode. (c)2021-2022 vitalyruhl",
+	"displayName": "Intouch-Language and Formatter for VSCode. (c)2021-2025 vitalyruhl",
 	"description": "Intouch-Language syntax highlighting, formatter and code snippets for VSCode",
 	"version": "1.4.1",
 	"icon": "images/logo.png",
@@ -15,7 +15,7 @@
 	"bugs": {
 		"url": "https://github.com/vitalyruhl/intouch-language/issues"
 	},
-	"license": "GNU",
+	"license": "GPL-3.0-or-later",
 	"galleryBanner": {
 		"color": "#030404",
 		"theme": "dark"
@@ -35,10 +35,7 @@
 		"theme",
 		"dark"
 	],
-	"main": "./out/extension",
-	"activationEvents": [
-		"onLanguage:intouch"
-	],
+	"main": "./dist/extension.js",
 	"contributes": {
 		"themes": [
 			{
@@ -153,21 +150,22 @@
 	"scripts": {
 		"start": "nodemon --watch src src/index.js",
 		"build:theme": "node src/index.js",
-		"vscode:prepublish": "npm run compile && npm run build:theme",
-		"postinstall": "npm run compile",
 		"compile": "tsc -p ./",
+		"bundle": "esbuild ./out/extension.js --bundle --platform=node --external:vscode --format=cjs --minify --sourcemap --outfile=dist/extension.js",
+		"vscode:prepublish": "npm run compile && npm run build:theme && npm run bundle",
+		"postinstall": "npm run compile",
 		"test": "npm run compile && node ./out/test/runTest.js",
 		"update:fixtures": "npm run compile && node ./scripts/update-fixtures.js",
 		"watch": "tsc -watch -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
-		"publish-patch": "npm run compile && npm run build:theme && vsce package && vsce publish patch",
-		"publish-minor": "npm run compile && npm run build:theme && vsce package && vsce publish minor",
-		"publish-major": "npm run compile && npm run build:theme && vsce package && vsce publish major",
-		"publish": "npm run compile && npm run build:theme && vsce package && vsce publish",
-		"clean:all": "rimraf ./out ./node_modules ./package-lock.json",
+		"publish-patch": "npm run compile && npm run build:theme && npm run bundle && vsce package && vsce publish patch",
+		"publish-minor": "npm run compile && npm run build:theme && npm run bundle && vsce package && vsce publish minor",
+		"publish-major": "npm run compile && npm run build:theme && npm run bundle && vsce package && vsce publish major",
+		"publish": "npm run compile && npm run build:theme && npm run bundle && vsce package && vsce publish",
+		"clean:all": "rimraf ./out ./dist ./node_modules ./package-lock.json",
 		"clear:all": "npm run clean:all",
-		"clear:out": "rimraf ./out",
-		"refresh": "npm run clean:all && npm install && npm run compile && npm run build:theme"
+		"clear:out": "rimraf ./out ./dist",
+		"refresh": "npm run clean:all && npm install && npm run compile && npm run build:theme && npm run bundle"
 	},
 	"capabilities": {
 		"virtualWorkspaces": true,
@@ -177,6 +175,7 @@
 		}
 	},
 	"devDependencies": {
+		"esbuild": "^0.24.0",
 		"@types/glob": "^9.0.0",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^24.5.2",
